--- a/project_last.rmd
+++ b/project_last.rmd
@@ -1,5 +1,5 @@
 ---
-title:    "MTH783P Final Project"
+title:    "MTH783P Final Project
 author:   "Shakil, 190610029, s.shakil@se23.qmul.ac.uk"
 abstract: "The analysis investigates the average price of avocados using time series forecasting methods. The data is split into two datasets: a training set (from January 1, 2015, to December 31, 2017) and a testing set (from January 2018 to March 11, 2018). This study conducts exploratory data analysis to identify missing values, outliers, and variable correlations, and to manage categorical values. The analysis reveals 1,620 missing values in avocado prices, which are replaced through the imputation method using the mean price for each type of avocado. The study also examines price dynamics by region and avocado type. ARIMA and Simple Exponential Smoothing (SES) models are used to predict future prices, with SES demonstrating slightly better performance based on RMSE and MAE metrics, and prediction curves. However, the ARIMA model has limitations, including its exclusion of external factors like total sales volume and bags sold, which may influence avocado prices. Additionally, using the ARIMA model is particularly challenging when multiple types of seasonality are involved, despite seasonal adjustments being made. This suggests the potential use of dynamic harmonic regression with ARMA errors to accommodate multiple seasonal patterns."
 date:     "Last compiled on:   `r format(Sys.time(), '%d %B, %Y')`"
